--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "test": "react-scripts test --passWithNoTests",
     "test:coverage": "react-scripts test --coverage --watchAll=false --passWithNoTests",
     "eject": "react-scripts eject",
-    "prepare": "husky install",
-    "test:coverage": "react-scripts test --coverage --watchAll=false --passWithNoTests"
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
