--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,3 +16,5 @@ jobs:
 
       - name: 🧪 Testing
         run: npm test
+        env:
+          REACT_APP_PHOTO_KEY: ${{ secrets.REACT_APP_PHOTO_KEY }}
