--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
       "src/**/*.tsx",
       "src/**/*.ts",
       "!src/index.tsx",
-      "!src/react-app-env.d.ts"
+      "!src/react-app-env.d.ts",
+      "!src/App.tsx"
     ]
   }
 }
